robot.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("./assets/images/background.jpg") no-repeat center center fixed; 
  background-size: cover;
  color: white;
  font-family: "Alegreya Sans", monospace;
}

.app-title {
  padding: 20px;
  text-align: center;
  font-size: 50px;
  text-transform: uppercase;
  margin-top: 3%;
}

.row {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin: 3%;
}

label {
  font-size: 20px;
}

.input-group {
  text-align: left;

}

input[type="text"] {
  margin-top: 10px;
  padding: 10px;
  width: 100%;
  border-radius: 10px;
}

.btn {
  background-color: #5564d7;
  color: white;
  padding: 15px 32px;
  border-radius: 10px;
  text-align: center;
  font-size: 16px;
  transition: transform 0.2s;

}

.btn:hover {
  transform: scale(1.2);
  cursor: pointer;
}

.row-break {
    flex-basis: 100%;
    height: 40px;
}

.main-control-area {
  border: 5px solid white;
  padding: 40px;
  margin: 7% 25%;
  border-radius: 10px;
  background-color: gray;
  text-align: center;
}

.progress {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  margin: 30px auto;
  border-radius: 20px;
  background: #f9f9f9;
  color: black;
}

.robot-image {
  position: relative;
  left: -4%;
  height: 100px;
  width: 75px;

  /* animation-name: robot-progress; */
  animation-duration: 5s;
  animation-timing-function: linear;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes robot-progress {
  0% {
    left: -4%;
  }
  100% {
    left: 93%;
  }
}

.progress-percentages {
    display: flex;
    justify-content: space-between;

}

.results {
    margin: 4%;
}

